fix cutoff legend

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 
 svg {
     border: 1px solid #ccc;
-    width: 75%;
+    width: 82%;
 }
 
 .container {
